==> RAKWireless/RAK-APOLLO3-RUI/cores/apollo3/component/core/mcu/apollo3/uhal/uhal_pwm.c <==
#include "uhal_pwm.h"
#include "uhal_timer.h"
#include "udrv_pwm.h"
#include "udrv_errno.h"
#define CTXPADNUM(ctx) ((CTx_tbl[ctx] >> 0) & 0x3f)
#define CTXPADFNC(ctx) ((CTx_tbl[ctx] >> 8) & 0x7)
#define CTX(pad, fn) ((fn << 8) | (pad << 0))
#define OUTC(timB, timN, N2) ((N2 << 4) | (timB << 3) | (timN << 0))
#define OUTCTIMN(ctx, n) (outcfg_tbl[ctx][n] & (0x7 << 0))
#define OUTCTIMB(ctx, n) (outcfg_tbl[ctx][n] & (0x1 << 3))
#define OUTCO2(ctx, n) (outcfg_tbl[ctx][n] & (0x1 << 4))
#define CLK AM_HAL_CTIMER_HFRC_12MHZ // Use an Ambiq HAL provided value to select which clock

static void pwm_init(udrv_pwm_port port, uint32_t freq_hz, uint8_t is_invert, uint32_t pin) {    
    uint8_t ctx = 0;
    for (ctx = 0; ctx < 32; ctx++)
    {
        if (CTXPADNUM(ctx) == pin)
        {
            break;
        }
    }
    if (ctx >= 32)
    {
        return; // could not find pad in CTx table
    }
   
    // Use the 0th index of the outcfg_tbl to select the functions
    uint32_t timer = OUTCTIMN(ctx, 0);
    uint32_t segment = AM_HAL_CTIMER_TIMERA;
    if (OUTCTIMB(ctx, 0))
    {
        segment = AM_HAL_CTIMER_TIMERB;
    }

    //
    // Among other things, am_bsp_low_power_init() stops the XT oscillator,
    // which is needed for this example.
    //
    am_hal_clkgen_control(AM_HAL_CLKGEN_CONTROL_XTAL_START, 0);

    // clear timer (also stops the timer)
    am_hal_ctimer_clear(timer, segment);
}

int32_t uhal_pwm_set_duty(udrv_pwm_port port, uint32_t duty) {

    uint32_t period_in_us = (uint32_t) (12000000/pwm_status[port].freq_hz);

    if (period_in_us > 0x0000FFFF)
    {
        return -UDRV_WRONG_ARG;
    }
    if (period_in_us < 3)
    {
        return -UDRV_WRONG_ARG;
    }

    uint32_t ontime = 0;

    switch (pwm_resolution) {
        case UDRV_PWM_RESOLUTION_8BIT:
            if (duty > 255) {
                return -UDRV_WRONG_ARG;
	    } else {
                duty = duty*100/255;
                ontime = (uint32_t)((duty * period_in_us) / ((0x01 << 8) - 1));
	    }
            break;
        case UDRV_PWM_RESOLUTION_10BIT:
            if (duty > 1023) {
                return -UDRV_WRONG_ARG;
	    } else {
                duty = duty*100/1023;
                ontime = (uint32_t)((duty * period_in_us) / ((0x01 << 10) - 1));
	    }
            break;
        case UDRV_PWM_RESOLUTION_12BIT:
            if (duty > 4095) {
                return -UDRV_WRONG_ARG;
	    } else {
                duty = duty*100/4095;
                ontime = (uint32_t)((duty * period_in_us) / ((0x01 << 12) - 1));
	    }
            break;
        case UDRV_PWM_RESOLUTION_14BIT:
            if (duty > 16383) {
                return -UDRV_WRONG_ARG;
	    } else {
                duty = duty*100/16383;
                ontime = (uint32_t)((duty * period_in_us) / ((0x01 << 14) - 1));
	    }
            break;
        default:
	    return -UDRV_INTERNAL_ERR;
    }

    uint8_t ctx = 0;
    for (ctx = 0; ctx < 32; ctx++)
    {
        if (CTXPADNUM(ctx) == pwm_status[port].pin)
        {
            break;
        }
    }
    if (ctx >= 32)
    {
        return -UDRV_INTERNAL_ERR; // could not find pad in CTx table
    }
   
    // Use the 0th index of the outcfg_tbl to select the functions
    uint32_t timer = OUTCTIMN(ctx, 0);
    uint32_t segment = AM_HAL_CTIMER_TIMERA;
    if (OUTCTIMB(ctx, 0))
    {
        segment = AM_HAL_CTIMER_TIMERB;
    }

    bool set_periods = true;
    uint32_t output = AM_HAL_CTIMER_OUTPUT_NORMAL;

    if ((ontime == 0) || (period_in_us == 0))
    {
        //if(pwm_status[port].is_invert == 0)
          output = AM_HAL_CTIMER_OUTPUT_FORCE0;
        //else
        //  output = AM_HAL_CTIMER_OUTPUT_FORCE1;

        set_periods = false; // disable setting periods when going into a forced mode
    }
    else if (ontime == period_in_us)
    {
        //if(pwm_status[port].is_invert == 0)
          output = AM_HAL_CTIMER_OUTPUT_FORCE1;
        //else
        //  output = AM_HAL_CTIMER_OUTPUT_FORCE0;

        set_periods = false; // disable setting periods when going into a forced mode
    }

    // Configure the pin
    am_hal_ctimer_output_config(timer,
                                segment,
                                pwm_status[port].pin,
                                output,
                                AM_HAL_GPIO_PIN_DRIVESTRENGTH_12MA); //

    //
    // Configure a timer to drive the LED.
    //
    am_hal_ctimer_config_single(timer,
                                segment,
                                (AM_HAL_CTIMER_FN_PWM_REPEAT | CLK) );

    if (set_periods)
    {   
        am_hal_ctimer_period_set(timer, segment, period_in_us, ontime);
        am_hal_ctimer_aux_period_set(timer, segment, period_in_us, ontime);
    
        am_hal_ctimer_start(timer, segment);
    }

    // I found this function at Sparkfun's Apollo3 Core
    // if timer is running and wait for timer value to roll over 
    //(will indicate that at least one pulse has been emitted)
    AM_CRITICAL_BEGIN // critical section when reading / writing config registers
    if ((segment == AM_HAL_CTIMER_TIMERA && *((uint32_t *)CTIMERADDRn(CTIMER, timer, CTRL0)) & (CTIMER_CTRL0_TMRA0EN_Msk)) ||
        (segment == AM_HAL_CTIMER_TIMERB && *((uint32_t *)CTIMERADDRn(CTIMER, timer, CTRL0)) & (CTIMER_CTRL0_TMRB0EN_Msk)))
    {
        uint32_t current = 0;
        uint32_t last = 0;
        do
        {
            last = current;
            current = am_hal_ctimer_read(timer, segment);
        } while (current >= last);
    }
    AM_CRITICAL_END // end critical section
    //--------------------------------------------------
    
    return UDRV_RETURN_OK;
}

static void pwm_deinit(udrv_pwm_port port) {

    uint8_t ctx = 0;
    for (ctx = 0; ctx < 32; ctx++)
    {
        if (CTXPADNUM(ctx) == pwm_status[port].pin)
        {
            break;
        }
    }
    if (ctx >= 32)
    {
        return; // could not find pad in CTx table
    }
   
    // Use the 0th index of the outcfg_tbl to select the functions
    uint32_t timer = OUTCTIMN(ctx, 0);
    uint32_t segment = AM_HAL_CTIMER_TIMERA;
    if (OUTCTIMB(ctx, 0))
    {
        segment = AM_HAL_CTIMER_TIMERB;
    }

    // clear timer (also stops the timer)
    am_hal_ctimer_clear(timer, segment);

    // Disable the PWM pins.
    am_hal_gpio_pinconfig(pwm_status[port].pin, g_AM_HAL_GPIO_DISABLE);
}

static void pwm_disable(udrv_pwm_port port) {
    uint8_t ctx = 0;
    for (ctx = 0; ctx < 32; ctx++)
    {
        if (CTXPADNUM(ctx) == pwm_status[port].pin)
        {
            break;
        }
    }
    if (ctx >= 32)
    {
        return; // could not find pad in CTx table
    }
   
    // Use the 0th index of the outcfg_tbl to select the functions
    uint32_t timer = OUTCTIMN(ctx, 0);
    uint32_t segment = AM_HAL_CTIMER_TIMERA;
    if (OUTCTIMB(ctx, 0))
    {
        segment = AM_HAL_CTIMER_TIMERB;
    }

    // Configure the pin
    am_hal_ctimer_output_config(timer,
                                segment,
                                pwm_status[port].pin,
                                AM_HAL_CTIMER_OUTPUT_FORCE0,
                                AM_HAL_GPIO_PIN_DRIVESTRENGTH_12MA); //

    // clear timer (also stops the timer)
    am_hal_ctimer_clear(timer, segment);
}

int32_t uhal_pwm_timer_create (timer_handler tmr_handler, TimerMode_E mode) {

    if(uhal_pwm_timer_id == NULL)
    {
        uhal_pwm_timer_id = xTimerCreate("PWM_TMR",
                                1,
                                get_apollo_timer_mode(mode),
                                NULL,
                                pwm_timer_timeout_handler);
    }

    pwm_tmr_handler = tmr_handler;

    if (uhal_pwm_timer_id != NULL) {
        return UDRV_RETURN_OK;
    } else {
        return -UDRV_INTERNAL_ERR;
    }
}

int32_t uhal_pwm_timer_start (uint32_t count, void *m_data) {

    if(uhal_pwm_timer_id == NULL)
    {
        return -UDRV_INTERNAL_ERR;
    }

    if(count == 0)
        return -UDRV_INTERNAL_ERR;
        
    p_context = m_data;

    if( isInISR() ) 
    {
        BaseType_t xHigherPriorityTaskWoken = pdFALSE;
        if(pdPASS != xTimerStopFromISR(uhal_pwm_timer_id, xHigherPriorityTaskWoken))
        {
            return -UDRV_INTERNAL_ERR;
        }

        if(xHigherPriorityTaskWoken != pdFALSE)
        {
            portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
        }

        if(pdPASS != xTimerChangePeriodFromISR(uhal_pwm_timer_id,
                        (uint32_t) (count*1.024f), // This is not correct solution! FIX ME!
                        &xHigherPriorityTaskWoken ))
        {
            return -UDRV_INTERNAL_ERR;
        }

        if(xHigherPriorityTaskWoken != pdFALSE)
        {
            portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
        }

        if(pdPASS != xTimerStartFromISR(uhal_pwm_timer_id, &xHigherPriorityTaskWoken))
        {
            return -UDRV_INTERNAL_ERR;
        }

        if(xHigherPriorityTaskWoken != pdFALSE)
        {
            portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
        }
    } 
    else
    {
        if(pdPASS != xTimerStop(uhal_pwm_timer_id, OSTIMER_WAIT_FOR_QUEUE))
        {
            return -UDRV_INTERNAL_ERR;
        }

        if(pdPASS != xTimerChangePeriod( uhal_pwm_timer_id,
                        (uint32_t) (count*1.024f), // This is not correct solution! FIX ME!
                        OSTIMER_WAIT_FOR_QUEUE ))
        {
            return -UDRV_INTERNAL_ERR;
        }

        // Start application timers.
        if (pdPASS != xTimerStart(uhal_pwm_timer_id, OSTIMER_WAIT_FOR_QUEUE))
        {
            return -UDRV_INTERNAL_ERR;
        }
    }

    return UDRV_RETURN_OK;
}

int32_t uhal_pwm_timer_stop (void) {
    
    if(uhal_pwm_timer_id == NULL)
    {
        return -UDRV_INTERNAL_ERR;
    }

    if( isInISR() ) 
    {
        BaseType_t xHigherPriorityTaskWoken = pdFALSE;
        if(pdPASS != xTimerStopFromISR(uhal_pwm_timer_id, xHigherPriorityTaskWoken))
        {
            return -UDRV_INTERNAL_ERR;
        }

        if(xHigherPriorityTaskWoken != pdFALSE)
        {
            portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
        }

    } 
    else
    {
        if(pdPASS != xTimerStop(uhal_pwm_timer_id, OSTIMER_WAIT_FOR_QUEUE))
        {
            return -UDRV_INTERNAL_ERR;
        }
    }

    return UDRV_RETURN_OK;
}
